--- a/src/views/chapters.twig
+++ b/src/views/chapters.twig
@@ -16,6 +16,7 @@
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">{{ chapter.title }}</h5>
+                <h6 class="card-text">{{ chapter.creation_date_fr }}</h6>
                 <p class="card-text">{{ chapter.content }}</p>
                 <a href="#" class="card-link">Lire plus...</a>
             </div>
