--- a/src/views/home.twig
+++ b/src/views/home.twig
@@ -20,7 +20,7 @@
         </div>
     </div>
 
-    <h1>Voici les derniers chapitres publiés : </h1>
+    <h1>Voici le dernier chapitre publié : </h1>
 
 
 {% for chapter in chapters %}
@@ -28,6 +28,7 @@
     <div class="card">
         <div class="card-body">
             <h5 class="card-title">{{ chapter.title }}</h5>
+            <h6 class="card-text">{{ chapter.creation_date_fr }}</h6>
             <p class="card-text">{{ chapter.content }}</p>
             <a href="#" class="card-link">Lire plus...</a>
         </div>
