--- a/src/views/subscribe.twig
+++ b/src/views/subscribe.twig
@@ -8,6 +8,8 @@
 
 {% block content %}
 
+    <h1>Inscivez vous !</h1>
+
     <form method="post" action="traitement.php">
 
         <div class="input-group flex-nowrap">
