--- a/src/views/connection.twig
+++ b/src/views/connection.twig
@@ -10,7 +10,7 @@
 
     <h1>Connectez vous</h1>
 
-    <form method="post" action="traitement.php">
+    <form method="post" action="../src/controllers/adminController.php">
 
         <div class="input-group flex-nowrap">
             <div class="input-group-prepend">
