--- a/src/views/layout.twig
+++ b/src/views/layout.twig
@@ -83,6 +83,9 @@
                             <a class="dropdown-item" href="http://localhost/projet4/public/index.php?acces=connection">Connexion</a>
                         </div>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="http://localhost/projet4/public/index.php?acces=admin">Admin</a>
+                    </li>
                 </ul>
             </div>
         </nav>
