--- a/src/views/contact.twig
+++ b/src/views/contact.twig
@@ -10,24 +10,24 @@
 
     <h1>Contactez moi !</h1>
 
-    <form method="post" action="traitement.php">
+    <form action="../src/models/contactManager.php" method="post">
         <div class="input-group flex-nowrap">
             <div class="input-group-prepend">
                 <span class="input-group-text" id="addon-wrapping">Votre nom</span>
             </div>
-            <input type="text" class="form-control" placeholder="Nom" aria-label="Username" aria-describedby="addon-wrapping">
+            <input type="text" class="form-control" placeholder="Nom" aria-label="Username" name="name" aria-describedby="addon-wrapping">
         </div>
         <div class="input-group flex-nowrap">
             <div class="input-group-prepend">
                 <span class="input-group-text" id="addon-wrapping">Votre e-mail</span>
             </div>
-            <input type="text" class="form-control" placeholder="Mail" aria-label="mail" aria-describedby="addon-wrapping">
+            <input type="text" class="form-control" placeholder="Mail" aria-label="mail" name="mail" aria-describedby="addon-wrapping">
         </div>
         <div class="input-group flex-nowrap">
             <div class="input-group-prepend">
                 <span class="input-group-text" id="addon-wrapping">Votre message</span>
             </div>
-            <textarea class="form-control" aria-label="With textarea"></textarea>
+            <textarea class="form-control" aria-label="With textarea" name="message"></textarea>
         </div>
         <button type="submit" class="btn btn-primary">Envoyer</button>
     </form>
