--- a/src/views/chapters.twig
+++ b/src/views/chapters.twig
@@ -17,7 +17,7 @@
             <div class="card-body">
                 <h5 class="card-title">{{ chapter.title }}</h5>
                 <h6 class="card-text">{{ chapter.creation_date_fr }}</h6>
-                <p class="card-text">{{ chapter.content }}</p>
+                <p class="card-text">{{ chapter.content | striptags }}</p>
                 <a href="http://localhost/projet4/public/index.php?acces=chapter&id={{ chapter.id }}" class="card-link">Lire plus...</a>
             </div>
         </div>
