--- a/src/views/layout.twig
+++ b/src/views/layout.twig
@@ -94,7 +94,11 @@
 
     <main>
 
-{% block content %}{% endblock %}
+        {% block content %}{% endblock %}
+
+        {% block comments %}{% endblock %}
+
+
 
     </main>
 
