Fix title block

--- a/src/views/admin.twig
+++ b/src/views/admin.twig
@@ -1,10 +1,6 @@
 {% extends "layout.twig" %}
 
-{% block title %}
-
-    <title>Espace d'administration</title>
-
-{% endblock %}
+{% block title %} Espace d'administration {% endblock %}
 
 {% block content %}
 
