--- a/src/views/chapters.twig
+++ b/src/views/chapters.twig
@@ -1,9 +1,7 @@
 {% extends "layout.twig" %}
 
 
-{% block title %}
-    <title>Intégralité des chapitres</title>
-{% endblock %}
+{% block title %} Intégralité des chapitres {% endblock %}
 
 
 {% block content %}
