--- a/src/views/home.twig
+++ b/src/views/home.twig
@@ -1,8 +1,6 @@
 {% extends "layout.twig" %}
 
-{% block title %}
-    <title>Bienvenue sur le blog de Jean !</title>
-{% endblock %}
+{% block title %} Bienvenue sur le blog de Jean ! {% endblock %}
 
 {% block content %}
 
@@ -37,7 +35,6 @@
 
 
 {% endfor %}
-
 
 
 {% endblock %}
