--- a/src/views/presentation.twig
+++ b/src/views/presentation.twig
@@ -1,10 +1,6 @@
 {% extends "layout.twig" %}
 
-{% block title %}
-
-    <title>Présentation de Jean</title>
-
-{% endblock %}
+{% block title %} Présentation de Jean {% endblock %}
 
 {% block content %}
 
