--- a/src/views/layout.twig
+++ b/src/views/layout.twig
@@ -1,3 +1,4 @@
+<?php session_start();?>
 <!doctype html>
 <html lang="fr">
 <!--   HEAD   -->
@@ -10,7 +11,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <!--  TITLE   -->
-    {% block title %}{% endblock %}
+    <title>{% block title %}{% endblock %}</title>
 
     <!--  SECONDARY META  -->
     <meta name="description" content="Blog de Jean Forteroche">
