--- a/src/views/subscribe.twig
+++ b/src/views/subscribe.twig
@@ -1,10 +1,6 @@
 {% extends "layout.twig" %}
 
-{% block title %}
-
-    <title>Inscription</title>
-
-{% endblock %}
+{% block title %} Inscription {% endblock %}
 
 {% block content %}
 
