--- a/src/views/admin.twig
+++ b/src/views/admin.twig
@@ -6,7 +6,7 @@
 
     <h1>Bienvenue dans votre espace d'administration Jean</h1>
 
-    <form method="post" action="../src/controllers/addChapterController.php">
+    <form method="post" action="./src/controllers/addChapterController.php">
 
         <div class="input-group flex-nowrap">
             <div class="input-group-prepend">
