--- a/src/views/chapters.twig
+++ b/src/views/chapters.twig
@@ -13,10 +13,10 @@
 
         <div class="card">
             <div class="card-body">
-                <h5 class="card-title">{{ chapter.title }}</h5>
+                <h5 class="card-title">{{ chapter.title | nl2br }}</h5>
                 <h6 class="card-text">{{ chapter.creation_date_fr }}</h6>
-                <p class="card-text">{{ chapter.content | striptags }}</p>
-                <a href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=chapter&id={{ chapter.id }}" class="card-link">Lire plus...</a>
+                <p class="card-text">{{ chapter.content | nl2br }}</p>
+                <a href="http://localhost/blog/public/index.php?acces=chapter&id={{ chapter.id }}" class="card-link">Lire plus...</a>
             </div>
         </div>
 
