--- a/src/views/connection.twig
+++ b/src/views/connection.twig
@@ -6,7 +6,7 @@
 
     <h1>Connectez vous</h1>
 
-    <form method="post" action="../src/controllers/connectionController.php">
+    <form method="post" action="http://localhost/blog/public/index.php?acces=connected">
 
         <div class="input-group flex-nowrap">
             <div class="input-group-prepend">
@@ -24,5 +24,7 @@
 
         <button type="submit" class="btn btn-primary">Envoyer</button>
     </form>
+
+    <p class="error">{{ error }}</p>
 
 {% endblock %}
