--- a/src/views/connection.twig
+++ b/src/views/connection.twig
@@ -12,14 +12,14 @@
             <div class="input-group-prepend">
                 <span class="input-group-text" id="addon-wrapping">Votre Pseudo</span>
             </div>
-            <input type="text" class="form-control" placeholder="Pseudo" aria-label="Username" name="pseudo" aria-describedby="addon-wrapping">
+            <input type="text" class="form-control" placeholder="Pseudo" aria-label="Username" name="pseudo" aria-describedby="addon-wrapping" required>
         </div>
 
         <div class="input-group flex-nowrap">
             <div class="input-group-prepend">
                 <span class="input-group-text" id="addon-wrapping">Votre mot de passe</span>
             </div>
-            <input type="password" class="form-control" placeholder="Mot de passe" aria-label="password" name="pass" aria-describedby="addon-wrapping">
+            <input type="password" class="form-control" placeholder="Mot de passe" aria-label="password" name="pass" aria-describedby="addon-wrapping" required>
         </div>
 
         <button type="submit" class="btn btn-primary">Envoyer</button>
