--- a/src/views/subscribe.twig
+++ b/src/views/subscribe.twig
@@ -12,28 +12,28 @@
             <div class="input-group-prepend">
                 <span class="input-group-text" id="addon-wrapping">Votre Pseudo</span>
             </div>
-            <input type="text" class="form-control" placeholder="Pseudo" aria-label="pseudo" name="pseudo" aria-describedby="addon-wrapping">
+            <input type="text" class="form-control" placeholder="Pseudo" aria-label="pseudo" name="pseudo" aria-describedby="addon-wrapping" required>
         </div>
 
         <div class="input-group flex-nowrap">
             <div class="input-group-prepend">
                 <span class="input-group-text" id="addon-wrapping">Votre mail</span>
             </div>
-            <input type="text" class="form-control" placeholder="mail" aria-label="mail" name="mail" aria-describedby="addon-wrapping">
+            <input type="text" class="form-control" placeholder="mail" aria-label="mail" name="mail" aria-describedby="addon-wrapping" required>
         </div>
 
         <div class="input-group flex-nowrap">
             <div class="input-group-prepend">
                 <span class="input-group-text" id="addon-wrapping">Votre mot de passe</span>
             </div>
-            <input type="password" class="form-control" placeholder="Mot de passe" aria-label="password" name="pass" aria-describedby="addon-wrapping">
+            <input type="password" class="form-control" placeholder="Mot de passe" aria-label="password" name="pass" aria-describedby="addon-wrapping" required>
         </div>
 
         <div class="input-group flex-nowrap">
             <div class="input-group-prepend">
                 <span class="input-group-text" id="addon-wrapping">Confirmez votre mot de passe</span>
             </div>
-            <input type="password" class="form-control" placeholder="Mot de passe" aria-label="password" name="pass_check" aria-describedby="addon-wrapping">
+            <input type="password" class="form-control" placeholder="Mot de passe" aria-label="password" name="pass_check" aria-describedby="addon-wrapping" required>
         </div>
 
         <button type="submit" class="btn btn-primary">Envoyer</button>
