--- a/src/views/admin.twig
+++ b/src/views/admin.twig
@@ -6,7 +6,11 @@
 
     <h1>Bienvenue dans votre espace d'administration Jean</h1>
 
-    <form method="post" action="http://localhost/blog/public/index.php?acces=postchap">
+    <section>
+
+    <h2>Vous pouvez saisir ici un nouveau chapitre.</h2>
+
+    <form method="post" action="https://jeanforteroche.valentin-antoin.fr/index.php?acces=postchap">
 
         <div class="input-group flex-nowrap">
             <div class="input-group-prepend">
@@ -20,6 +24,26 @@
        <button type="submit" class="btn btn-primary">Envoyer</button>
 
     </form>
+    </section>
+
+    <section>
+
+
+    <h2>Retrouvez ici tous les commentaires qui sont signalés.</h2>
+
+{%  for comment in comments %}
+
+     <div class="card">
+        <div class="card-body">
+            <h5 class="card-title">Posté par : {{ comment.user_pseudo }}</h5>
+            <h6 class="card-text">Le {{ comment.creation_date_fr }}</h6>
+            <p class="card-text">{{ comment.content }}</p>
+        </div>
+     </div>
+
+{% endfor %}
+
+    </section>
 
 {% endblock %}
 
