--- a/src/views/connection.twig
+++ b/src/views/connection.twig
@@ -6,7 +6,7 @@
 
     <h1>Connectez vous</h1>
 
-    <form method="post" action="http://localhost/blog/public/index.php?acces=connected">
+    <form method="post" action="https://jeanforteroche.valentin-antoin.fr/index.php?acces=connected">
 
         <div class="input-group flex-nowrap">
             <div class="input-group-prepend">
