--- a/src/views/layout.twig
+++ b/src/views/layout.twig
@@ -19,13 +19,13 @@
     <!--  OPENGRAPH  -->
     <meta property="og:title" content="Blog de Jean Forteroche">
     <meta property="og:type" content="website">
-    <meta property="url" content="">
+    <meta property="url" content="https://jeanforteroche.valentin-antoin.fr">
     <meta property="og:image" content="img/typewriter.png">
     <meta property="og:description" content="Blog de Jean Forteroche">
 
     <!--  TWITTER  -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="">
+    <meta name="twitter:site" content="https://jeanforteroche.valentin-antoin.fr">
     <meta name="twitter:title" content="Blog de Jean Forteroche">
     <meta name="twitter:description" content="Blog de Jean Forteroche">
     <meta name="twitter:creator" content="@Valentin_Antoin">
@@ -56,39 +56,39 @@
     <header>
 
         <nav class="navbar fixed-top navbar-expand-lg navbar navbar-dark bg-dark">
-            <a class="navbar-brand" href="http://localhost/blog/public/index.php">Billet simple pour l'Alaska</a>
+            <a class="navbar-brand" href="https://jeanforteroche.valentin-antoin.fr/index.php">Billet simple pour l'Alaska</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="http://localhost/blog/public/index.php">Accueil <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="https://jeanforteroche.valentin-antoin.fr/index.php">Accueil <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="http://localhost/blog/public/index.php?acces=chapters">Chapitres <span class="sr-only"></span></a>
+                        <a class="nav-link" href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=chapters">Chapitres <span class="sr-only"></span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="http://localhost/blog/public/index.php?acces=presentation">Présentation</a>
+                        <a class="nav-link" href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=presentation">Présentation</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Connectez-vous
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="http://localhost/blog/public/index.php?acces=subscribe">Inscription</a>
-                            <a class="dropdown-item" href="http://localhost/blog/public/index.php?acces=connection">Connexion</a>
+                            <a class="dropdown-item" href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=subscribe">Inscription</a>
+                            <a class="dropdown-item" href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=connection">Connexion</a>
                         </div>
                     </li>
                     {% if session.admin is defined %}
                     <li class="nav-item">
-                        <a class="nav-link" href="http://localhost/blog/public/index.php?acces=admin">Admin</a>
+                        <a class="nav-link" href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=admin">Admin</a>
                     </li>
                     {% endif %}
 
                     {% if session.pseudo is defined %}
                     <li>
-                    <a class="nav-link" href="http://localhost/blog/public/index.php?acces=disconnect">Se déconnecter</a>
+                    <a class="nav-link" href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=disconnect">Se déconnecter</a>
                     </li>
                 </ul>
                 <span class="navbar-text">
@@ -110,6 +110,7 @@
 
     <footer>
 
+        <a href="mailto:valentin.antoin@gmail.com"><i class="far fa-envelope fa-4x"></i></a>
         <a href="#facebook" title="Facebook"><i class="fab fa-facebook-square fa-4x"></i></a>
         <a href="#twitter" title="Twitter"><i class="fab fa-twitter-square fa-4x"></i></a>
         <a href="#instagram" title="Instagram"><i class="fab fa-instagram fa-4x"></i></a>
@@ -119,6 +120,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
     {% block script %}{% endblock %}
 
 
