--- a/src/views/admin.twig
+++ b/src/views/admin.twig
@@ -38,8 +38,11 @@
             <h5 class="card-title">Posté par : {{ comment.user_pseudo }}</h5>
             <h6 class="card-text">Le {{ comment.creation_date_fr }}</h6>
             <p class="card-text">{{ comment.content }}</p>
+            <span><a href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=valcom&id={{ comment.id }}">  Valider  </a><a href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=delcom&id={{ comment.id }}">  Supprimer  </a></span>
         </div>
      </div>
+
+
 
 {% endfor %}
 
