--- a/src/views/chapter.twig
+++ b/src/views/chapter.twig
@@ -39,7 +39,7 @@
 
                 {% if session.pseudo is defined %}
 
-                    <a href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=reportcom&id={{ comment.id }}">Signaler ce commentaire.</a>
+                    <a href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=reportcom&id={{ chapter.id }}&com={{ comment.id }}">Signaler ce commentaire.</a>
 
                 {% endif %}
 
