--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,11 +2,39 @@
 
 body {
     background-image: url("../img/paper.jpg");
+    font-family: Ubuntu;
 }
 
 .card {
     font-family: sofia;
     width: 80%;
+    margin-left: 10%;
+    margin-bottom: 1rem;
+}
+
+.controls {
+    margin-left: 2rem;
+}
+
+.chapterContent {
+    border-bottom: 6px solid #343a40;
+    -webkit-border-radius: 30%;
+    -moz-border-radius: 30%;
+    border-radius: 30%;
+    padding-bottom: 5rem;
+    justify-content: center;
+}
+
+h3 {
+    font-size: 1.2rem;
+}
+
+h4 {
+    font-size: 1rem;
+}
+
+.navbar-text {
+    margin-left: 20%;
 }
 
 main {
@@ -36,15 +64,35 @@ nav > a:first-child{
     margin-left: 0;
 }
 
+.btnAdmin {
+    width: 20%;
+    margin-left: 1%;
+}
+
+.btnChap {
+    width: 20%;
+    margin-left: 18%;
+}
+
+.list-group {
+    width: 60%;
+    margin-left: 20%;
+}
+
 
 
 /*---   MAIN   ---*/
-
 h1 {
+    text-decoration: underline;
+    text-align: center;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+
+h2 {
     margin-top: 2rem;
     margin-bottom: 2rem;
     text-align: center;
-    text-decoration: underline;
 }
 
 /*---   FORM   ---*/
@@ -71,7 +119,7 @@ footer {
     justify-content: space-around;
     padding: 2rem;
     margin-top: 3rem;
-    border-top: 10px solid #343a40;
+    border-top: 6px solid #343a40;
     -webkit-border-radius: 30%;
     -moz-border-radius: 30%;
     border-radius: 30%;
