--- a/src/views/chapters.twig
+++ b/src/views/chapters.twig
@@ -12,8 +12,8 @@
     {% for chapter in chapters %}
 
         <div class="card">
+            <h5 class="card-header">{{ chapter.title | nl2br }}</h5>
             <div class="card-body">
-                <h5 class="card-title">{{ chapter.title | nl2br }}</h5>
                 <h6 class="card-text">{{ chapter.creation_date_fr }}</h6>
                 <p class="card-text">{{ chapter.content | nl2br }}</p>
                 <a href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=chapter&id={{ chapter.id }}" class="card-link">Lire plus...</a>
