--- a/src/views/home.twig
+++ b/src/views/home.twig
@@ -22,18 +22,14 @@
     <h1>Voici le dernier chapitre publié : </h1>
 
 
-    <div class="card">
-        <section class="card-body">
-            <h5 class="card-title">{{ chapter.title | nl2br}}</h5>
+    <div class="card border-dark">
+        <h5 class="card-header">{{ chapter.title | nl2br}}</h5>
+        <div class="card-body">
             <h6 class="card-text">{{ chapter.creation_date_fr }}</h6>
             <p class="card-text">{{ chapter.content | nl2br}}</p>
             <a href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=chapter&id={{ chapter.id }}" class="card-link">Lire plus...</a>
-        </section>
+        </div>
     </div>
-
-
-
-
 
 
 {% endblock %}
