Add Counting method to admin

--- a/src/views/admin.twig
+++ b/src/views/admin.twig
@@ -8,6 +8,25 @@
 
     <section>
 
+        <ul class="list-group">
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+                Nombre de chapitre publié
+                <span class="badge badge-secondary badge-pill">{{ nbChapter }}</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+                Nombre de commentaire posté
+                <span class="badge badge-secondary badge-pill">{{ nbComment }}</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+                Nombre d'utilisateur enregistré
+                <span class="badge badge-secondary badge-pill">{{ nbUser }}</span>
+            </li>
+        </ul>
+
+    </section>
+
+    <section>
+
     <h2>Vous pouvez saisir ici un nouveau chapitre.</h2>
 
     <form method="post" action="https://jeanforteroche.valentin-antoin.fr/index.php?acces=postchap">
@@ -38,7 +57,10 @@
             <h5 class="card-title">Posté par : {{ comment.user_pseudo }}</h5>
             <h6 class="card-text">Le {{ comment.creation_date_fr }}</h6>
             <p class="card-text">{{ comment.content }}</p>
-            <span><a href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=valcom&id={{ comment.id }}">  Valider  </a><a href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=delcom&id={{ comment.id }}">  Supprimer  </a></span>
+
+                <a href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=valcom&id={{ comment.id }}"><button type="button" class="btn btnAdmin btn-success">Valider</button></a>
+                <a href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=delcom&id={{ comment.id }}"><button type="button" class="btn btnAdmin btn-danger">Supprimer</button></a>
+
         </div>
      </div>
 
