--- a/src/views/layout.twig
+++ b/src/views/layout.twig
@@ -75,6 +75,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=presentation">Présentation</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=contact">Contact</a>
+                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Connectez-vous
