--- a/src/views/subscribe.twig
+++ b/src/views/subscribe.twig
@@ -19,7 +19,7 @@
             <div class="input-group-prepend">
                 <span class="input-group-text" id="addon-wrapping">Votre mail</span>
             </div>
-            <input type="text" class="form-control" placeholder="mail" aria-label="mail" name="mail" aria-describedby="addon-wrapping" required>
+            <input type="email" class="form-control" placeholder="mail" aria-label="mail" name="mail" aria-describedby="addon-wrapping" required>
         </div>
 
         <div class="input-group flex-nowrap">
