Add required input

--- a/src/views/contact.twig
+++ b/src/views/contact.twig
@@ -15,25 +15,25 @@
             <div class="input-group-prepend">
                 <span class="input-group-text" id="addon-wrapping">Titre de votre message</span>
             </div>
-            <input type="text" class="form-control" placeholder="Titre" aria-label="title" name="title" aria-describedby="addon-wrapping">
+            <input type="text" class="form-control" placeholder="Titre" aria-label="title" name="title" aria-describedby="addon-wrapping" required>
         </div>
         <div class="input-group flex-nowrap">
             <div class="input-group-prepend">
                 <span class="input-group-text" id="addon-wrapping">Votre nom</span>
             </div>
-            <input type="text" class="form-control" placeholder="Nom" aria-label="Username" name="name" aria-describedby="addon-wrapping">
+            <input type="text" class="form-control" placeholder="Nom" aria-label="Username" name="name" aria-describedby="addon-wrapping" required>
         </div>
         <div class="input-group flex-nowrap">
             <div class="input-group-prepend">
                 <span class="input-group-text" id="addon-wrapping">Votre e-mail</span>
             </div>
-            <input type="text" class="form-control" placeholder="Mail" aria-label="mail" name="mail" aria-describedby="addon-wrapping">
+            <input type="text" class="form-control" placeholder="Mail" aria-label="mail" name="mail" aria-describedby="addon-wrapping" required>
         </div>
         <div class="input-group flex-nowrap">
             <div class="input-group-prepend">
                 <span class="input-group-text" id="addon-wrapping">Votre message</span>
             </div>
-            <textarea class="form-control" aria-label="With textarea" name="message"></textarea>
+            <textarea class="form-control" aria-label="With textarea" name="message" required></textarea>
         </div>
         <button type="submit" class="btn btn-primary">Envoyer</button>
     </form>
